
  - Fix running tests with non-UTF8 server_encoding
    (Github issue #26)
  - Fix crash with missing client_encoding
    (Github issue #29)
    [David Christensen, reported by Marko Tiikkaja]

Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)

  - Remove errant debugging aid from test suite



Version 3.6.1  Released May 22, 2017 (git tag 3.6.1)

  - Various fixes to support testing against Postgres 10beta
    [David Christensen]


Version 3.6.0  Released April 17, 2017 (git tag 3.6.0)

  - Make sure we do not inadvertently modify the string passed to prepare() when 
    doing the new backslash escape manipulation.
    [Greg Sabino Mullane]
    (CPAN ticket #114000)

  - Fix bug where $DBD::Pg::DBDPG_DEFAULT not picked up as a magic 
    string first time it is used in a script.
    [Greg Sabino Mullane]
    (CPAN ticket #112309)

  - Fix UTF8 flag handling in pg_(get|put)copydata
    [Dagfinn Ilmari Mannsåker]

  - Fix UTF8 double-encoding with pg_enable_utf8 = 0
    [Serge Pushkin]
    (CPAN ticket #103137)

  - Fix bug in quote_name which would fail to quote in some circumstances
    (Github Issue #22)

  - Allow clean parsing of new Postgres X.Y version format
    [Erik Rijkers    er at xs4all.nl]

  - Add pg_canonical_ids() and pg_canonical_names(), which returns information 
    about each column in the result set.
    [Warstone    warstone at list.ru]
    (CPAN ticket #106858)

  - Map SQL_NUMERIC to PG_NUMERIC (instead of PG_FLOAT8)
    [Alice Maz    alice at alizemaz.com]
    (CPAN ticket #120358)
 
  - Force real, float, and double precision into SvNVs
    [Greg Sabino Mullane]
    (CPAN ticket #113683 and other places)

  - Support for number of rows greater than an "int". Requires support for same 
    from a future version of libpq before it will work completely.
    [Greg Sabino Mullane]
    (CPAN ticket #102444)

  - Fix skipped test counts in Win32 builds
    [Andy Grundman]
