@@ -4,6 +4,8 @@
   - Fix crash with missing client_encoding
     (Github issue #29)
     [David Christensen, reported by Marko Tiikkaja]
+  - Fix crash with missing server_version
+    [David Christensen]
 
 Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)
 
